--- a/index.html
+++ b/index.html
@@ -76,14 +76,6 @@
             margin-right: 20px;
             border-radius: 10px;
         }
-        ul {
-            list-style: none;
-            text-align: center;
-            padding: 0;
-        }
-        ul li {
-            margin-bottom: 0.8rem;
-        }
     </style>
 </head>
 <body>
@@ -95,21 +87,17 @@
         <p>O Vodu é uma antiga e vasta religião originária da África Ocidental, espalhada pelo mundo através do tráfico de escravizados. Muito mais do que rituais e magia negra, como muitos acreditam, o Vodu é uma teia rica de crenças, divindades e práticas ancestrais. Ao longo dos séculos, o Vodu evoluiu, adaptando-se a diferentes culturas, com suas raízes firmemente fincadas em lugares como o Haiti, o Caribe e os Estados Unidos. Apesar das diferentes variações, o núcleo espiritual permanece: conectar-se com entidades espirituais e abrir caminhos de prosperidade, proteção e cura.</p>
         <a class="cta-btn" href="https://wa.me/555591469622" target="_blank">Fale comigo e descubra mais!</a>
     </section>
+    
     <section class="section-dark">
-        <h2>Consultas Individuais com Daniel de Danjere</h2>
-        <p>Combinando as tradições Vodu com a sabedoria dos Grimórios antigos, minhas consultas proporcionam uma experiência única para guiar você em suas intenções e metas. Através de uma conexão profunda com entidades e espíritos, trabalhamos juntos para remover obstáculos, desbloquear caminhos e alcançar seus objetivos espirituais e materiais.</p>
-        <h3>Serviços Oferecidos:</h3>
+        <h2>Como Posso Te Ajudar</h2>
+        <p>Ofereço meus serviços para quem busca auxílio espiritual e orientação através de métodos antigos e poderosos:</p>
         <ul>
-            <li>Abertura de Caminhos</li>
-            <li>Prosperidade Financeira</li>
-            <li>Amarração para Amor e União de Casais</li>
-            <li>Afastamento de Rivais</li>
-            <li>Proteção e Cura</li>
-            <li>Desmanche de Magias</li>
-            <li>Jogo de Tarô</li>
-            <li>Rituais Personalizados</li>
+            <li>Consulta com oráculo de dados</li>
+            <li>Auxílio para resolver problemas espirituais</li>
+            <li>Consulta de tarô</li>
         </ul>
     </section>
+
     <section class="container">
         <h2>Quem Sou Eu?</h2>
         <img src="https://i.ibb.co/m8fH7pW/Daniel-de-Danjere.jpg" alt="Daniel de Danjere">
@@ -117,6 +105,7 @@
         <p>Se você está em busca de clareza espiritual ou deseja atingir seus objetivos através do poder do ocultismo, estou aqui para guiá-lo em sua própria jornada de descobertas espirituais.</p>
         <a class="cta-btn" href="https://wa.me/555591469622" target="_blank">Me Chame Agora no WhatsApp!</a>
     </section>
+
     <footer class="section-dark text-center">
         <p>&copy; 2024 Daniel de Danjere. Todos os direitos reservados.</p>
     </footer>
