--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
             margin-right: 20px;
             border-radius: 10px;
         }
+        ul {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+        }
+        ul li {
+            margin-bottom: 0.8rem;
+        }
     </style>
 </head>
 <body>
@@ -90,7 +98,7 @@
     
     <section class="section-dark">
         <h2>Como Posso Te Ajudar</h2>
-        <p>Ofereço meus serviços para quem busca auxílio espiritual e orientação através de métodos antigos e poderosos:</p>
+        <p style="text-align: center;">Ofereço meus serviços para quem busca auxílio espiritual e orientação através de métodos antigos e poderosos:</p>
         <ul>
             <li>Consulta com oráculo de dados</li>
             <li>Auxílio para resolver problemas espirituais</li>
